phase1-defect-fixed